Tue Jun 19 22:10:36 EEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Fixed a possible crash in silc_packet_send_prepare.  It now
	  assures always that there is enough space in the buffer and
	  at the tail area of the buffer (for MAC). 

	  Fixed the inbound buffer reallocation in silc_packet_read.
	  It was old code and did not handle the reallocation correctly.
	  Affected

	  The affected file is lib/silccore/silcpacket.c.

	* Fixed buffer overflow in silc_parse_nickname in the file
	  lib/silcutil/silcutil.c.

Tue Jun 19 13:40:09 CEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* make install generates new server keys only if there is not
	  keys already.

Mon Jun 18 18:49:07 EEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Set SILC_MESSAGE_FLAG_NOREPLY when sending the away message.
	  Added check that if the NOREPLY is set then we will not send
	  the away message.  This avoids infinite loop of away messages
	  if both clients are away.  The affected file is
	  lib/silcclient/client_prvmsg.c.

	* Fixed client crash if /NICK was given without arguments.
	  Affected file lib/silcclient/command.c.

	* Server does not send the invite list in INVITE command back
	  to the client if the list was not altered.  Added this notion
	  to the protocol spec as well.  Affected file silcd/command.c.

	  Fixed possible crash in INVITE command by checking the
	  value of silc_server_get_client_route command.

	* Fixed the INVITE notify type handling.  The arguments are now
	  taken in correct order and client does not crash.  The affected
	  file is irssi/src/silc/core/silc-channels.c.

	  Removed the "Inviting xxx to channel" message from the
	  client library away and let the application handle it.
	  Affected file lib/silcclient/command.c.  Added that message
	  to Irssi SILC client's message formats.

	* Fixed CMODE command crash in client.  It now checks the
	  amount of arguments correctly and does not crash.  The affected